pushing for love

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MvcMovieContext": "Data Source=MvcMovieContext-c3ee7074-e7c3-4bfc-8555-830f75ad540c.db"
+    "MvcMovieContext": "Data Source=MvcMovie.db"
   }
 }
